--- a/tempodeaprender/conteudo/sonsdafala/1.html
+++ b/tempodeaprender/conteudo/sonsdafala/1.html
@@ -168,6 +168,174 @@
                     homem em cada lugar frequentado por ela” (LEMLE, 2007,
                     p.19).
                 </p>
+                <table width="100%" border="1px">
+                    <tr>
+                        <td colspan="4">Quadro 2 - <strong>Uma letra representado diferentes sons,
+                            segundo a posição</strong></td>
+                    </tr>
+                    <tr>
+                        <td><em>Letra</em></td>
+                        <td><em>Fone (sons)</em></td>
+                        <td><em>Posição</em></td>
+                        <td><em>Exemplos</em></td>
+                    </tr>
+                    <tr>
+                        <td>S</td>
+                        <td>
+                            <p>[S]</p>
+                            <p>[Z]</p>
+                            <p>[š]</p>
+                            <p>[ž]</p>
+                        </td>
+                        <td>
+                            <p>Início de
+                                palavra
+                            </p>
+                            <p>
+                                Intervocálico
+                            </p>
+                            <p>
+                                Diante de
+                                consoante
+                                surda ou em
+                                final de
+                                palavra
+                            </p>
+                            <p>
+                                Diante de
+                                consoante
+                                sonora
+                            </p>
+                        </td>
+                        <td>
+                            <p>sala</p>
+                            <p>casa, duas árvores</p>
+                            <p>resto, duas casas</p>
+                            <p>rasgo, duas gotas</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>m</td>
+                        <td>
+                            [m]</br>
+                            (nasalidade da vogal precedente)
+                        </td>
+                        <td>
+                            <p>Antes de Vogal</p>
+                            <p>Depois de vogal diantes de <strong>p</strong> e <strong>b</strong></p>
+                        </td>
+                        <td>
+                            <p>
+                                mala, leme
+                            </p>
+                            <p>
+                                campo, sombra
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            n
+                        </td>
+                        <td>
+                            [n]
+                        </td>
+                        <td>
+                            <p>
+                                Antes de vogal
+                            </p>
+                            <p>
+                                Depois de vogal
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                nada, banana
+                            </p>
+                            <p>
+                                ganso, tango, conto
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            l
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p>[l]</p>
+                                        <p>[u]</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>[e] ou [ɛ]</p>
+                                        <p>[i]</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>[o] ou [ɔ]</p>
+                                        <p>
+                                            [u]
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p>Antes de vogal</p>
+                                        <p>Depois de vogal</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>Não-final</p>
+                                        <p>Final de palavra</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>Não-final</p>
+                                        <p>
+                                            Final de palavras
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p>bola, lua</p>
+                                        <p>calma, sal</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>dedo, pedra</p>
+                                        <p>padre, morte</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black">
+                                    <td>
+                                        <p>bolo, cova</p>
+                                        <p>
+                                            bolo, amigo
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+                Fonte: Lemle, 2007, p. 21.
             </div>
         </div>
     </div>
