--- a/tempodeaprender/conteudo/sonsdafala/2.html
+++ b/tempodeaprender/conteudo/sonsdafala/2.html
@@ -18,7 +18,7 @@
         }
 
         p {
-            font-size: 1.4rem;
+            font-size: 1.45rem;
             font-family: 'PT Sans', sans-serif;
             text-indent: 5%;
         }
@@ -30,39 +30,64 @@
         h2 {
             text-transform: uppercase;
         }
+
+        td{
+            text-align: center;
+            font-size: 1.5rem;
+        }
+
+        .centraliza{
+            text-align: center !important;
+        }
     </style>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row mark">
-            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
-                <h2>Unidade III</h2>
-            </div>
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 text-center">
-                <h3>3ª CAPACIDADE: DISCRIMINAÇÃO DOS SONS DA FALA</h3>
+                <h3>As relações complicadas entre sons e letra</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
-                <p>
-                    As atividades com rimas e aliterações servem não só para você desenvolver a consciência fonológica, <strong>a capacidade de focalizar as palavras nos sons que as constituem</strong> e que envolvem múltiplas habilidades por conta da complexidade linguística: a palavra, as sílabas, os fonemas; como também possibilitar a segmentação da cadeia sonora, levando o alfabetizando a identificar o “pedaço” da palavra que corresponde à rima ou à sílaba que se repete no início de palavras, as aliterações como já mencionamos.
-                </p>
-                <p>
-                    Essas atividades também servem para introduzir o alfabetizando na compreensão do princípio alfabético: mesmos sons correspondem às mesmas letras, se acompanhadas de registro escrito de palavras que terminam ou começam com o mesmo som, destacando-se a correspondência de segmentos orais com uma mesma sequência de letras.
-                </p>
-                <p>
-                    As atividades com rimas e aliterações contribuem significativamente para o processo de alfabetização por levar o alfabetizando a:
-                </p>
-                <p>
-                    - Dirigir a atenção para a cadeia sonora das palavras;
-                </p>
-                <p>
-                    - Superar o <strong>realismo nominal</strong> (por exemplo: achar que a escrita dos nomes das pessoas seja proporcional ao seu tamanho (ou idade), e não ao comprimento do nome correspondente);
-                </p>
+                <table width="100%" border="1px">
+                    <tr>
+                        <td colspan="4">
+                           Quadro 3: <strong>Um som representado por diferentes 
+                            letras, segundo a posição
+                           </strong> 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><em>Fone (som)</em></td>
+                        <td><em>Letra</em></td>
+                        <td><em>Posição</em></td>
+                        <td><em>Exemplos</em></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            [k]
+                        </td>
+                        <td>
+                            <p><strong>c</strong></p>
+                            <p><strong>qu</strong></p>
+                        </td>
+                        <td>
+                            <p>Diante de <strong>a, o, u</strong></p>
+                            <p>Diante de <strong>e, i</strong></p>
+                        </td>
+                        <td>
+                            <p>Casa, come, bicudo</p>
+                            <p>pequeno, esquina</p>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
 </body>
 
 </html>
+
+
