--- a/tempodeaprender/conteudo/formadasletras/2.html
+++ b/tempodeaprender/conteudo/formadasletras/2.html
@@ -193,28 +193,28 @@
                             <table width="100%">
                                 <tr>
                                     <td>
-                                        <p class="centraliza"><strong>ss</strong></p>
-                                        <p class="centraliza"><strong>ç</strong></p>
-                                        <p class="centraliza"><strong>sç</strong></p>
+                                        <p class="centraliza">russo</p>
+                                        <p class="centraliza">ruço</p>
+                                        <p class="centraliza">cresça</p>
                                     </td>
                                 </tr>
                                 <tr style="border-top: 1px solid black;">
                                     <td>
-                                        <p class="centraliza"><strong>ss</strong></p>
-                                        <p class="centraliza"><strong>c</strong></p>
-                                        <p class="centraliza"><strong>sc</strong></p>
+                                        <p class="centraliza">posseiro, assento</p>
+                                        <p class="centraliza">roceiro, acento</p>
+                                        <p class="centraliza">asceta</p>
                                     </td>
                                 </tr>
                                 <tr style="border-top: 1px solid black;">
                                     <td>
-                                        <p class="centraliza"><strong>s</strong></p>
-                                        <p class="centraliza"><strong>ç</strong></p>
+                                        <p class="centraliza">balsa</p>
+                                        <p class="centraliza">alça</p>
                                     </td>
                                 </tr>
                                 <tr style="border-top: 1px solid black;">
                                     <td>
-                                        <p class="centraliza"><strong>s</strong></p>
-                                        <p class="centraliza"><strong>c</strong></p>
+                                        <p class="centraliza">persegue</p>
+                                        <p class="centraliza">percebe</p>
                                     </td>
                                 </tr>
                             </table> 
