--- a/tempodeaprender/index.html
+++ b/tempodeaprender/index.html
@@ -2,10 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    <script>
+        window.onload = function(){
+            document.location.href = 'https://etempodeaprender.github.io';
+        }
+    </script>
 </head>
 <body>
-    teste
 </body>
 </html>
